--- a/layouts/shortcodes/hike-details.html
+++ b/layouts/shortcodes/hike-details.html
@@ -12,27 +12,4 @@
 {{ end }}
 <h3>{{ .Get "title" | default (i18n "hikeFacts") }}</h3>
 {{ partial "hike-details" $.Page }}
-{{ with $.Page }}
-<p class="buttonRow">
-  {{ with .Params.start }}
-    <a href="https://www.google.com/maps/search/?api=1&query={{ . }}" class="buyButton secondary" target="_blank">{{ i18n "hikeStarting" }}</a>
-  {{ end }}
-  {{ with .Params.alt }}
-    {{ with .start }}
-    <a href="https://www.google.com/maps/search/?api=1&query={{ . }}" class="buyButton secondary" target="_blank">{{ i18n "hikeAltStarting" }}</a>
-    {{ end }}
-  {{ end }}
-  {{ with .Params.maplink }}
-    <a href="{{ . }}" class="buyButton secondary" target="_blank">{{ i18n "hikeMap" }}</a>
-  {{ end }}
-</p>
-{{ end }}
-{{ with $.Page.Params.video }}
-<div style="position: relative; padding-bottom: 56%; height: 0; margin: 1.5em 0; overflow: hidden;">
-  <iframe src="{{ . }}widget" frameborder="0" scrolling="no" allowfullscreen width="1024" height="801" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;">
-  </iframe>
-</div>
-<p class="buttonRow">
-  <a href="{{ . }}explore" class="buyButton secondary" target="_blank">{{ i18n "hikeInteractive" }}</a>
-</p>
-{{ end }}
+{{ partial "hike-details-buttons" $.Page }}
