Minor layout fixes:
* Add Page.js to first page (to make search work)
* Add map buttons to stub template

--- a/layouts/hikes/stub.html
+++ b/layouts/hikes/stub.html
@@ -11,6 +11,7 @@
   {{ end }}
   {{ .Scratch.Set "lead" "NOLEAD" }}
   {{ partial "hike-details" . }}
+  {{ partial "hike-details-buttons" . }}
   {{ if .Pages }}
     <h3>Hikes to this peak</h3>
     {{ partial "multipath-hike-short" .}}
