Add "description" attribute to hike-details shortcode to display hike description together with other details. It makes no sense to have the description twice in the Markdown file

--- a/layouts/shortcodes/hike-details.html
+++ b/layouts/shortcodes/hike-details.html
@@ -1,3 +1,6 @@
+{{ if .Get "description" }}
+{{ $.Page.Params.description | markdownify }}
+{{ end }}
 {{ if $.Page.Params.Lead }}
   {{ with $.Page.Resources.GetMatch $.Page.Params.Lead }}
     <div class="fancy-figure box caption-position-default">
