Bug fix: sort regions by title

--- a/layouts/partials/hikes-sidebar-regions.html
+++ b/layouts/partials/hikes-sidebar-regions.html
@@ -2,7 +2,7 @@
 <div class="regbox decorated">
   <h3 class="sidebar__title">{{ i18n "regions" }}</h3>
   <ul>
-    {{ range .Pages }}
+    {{ range .Pages.ByTitle }}
       <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
     {{ end }}
   </ul>
