Fix "new-hike" script, add EN/SI default values to hikes template
Also: display "Path description" button linking to third-party web pages

--- a/static/v3/css/other.css
+++ b/static/v3/css/other.css
@@ -72,7 +72,7 @@ a.footnote {
   vertical-align: text-top;
   padding-left: 0.2em; }
 
-div.footnotes {
+div.footnotes, section.footnotes {
   margin-top: 3em; }
 
 h1,
