--- a/layouts/partials/hike-details-buttons.html
+++ b/layouts/partials/hike-details-buttons.html
@@ -16,7 +16,14 @@
   <iframe src="{{ . }}widget" frameborder="0" scrolling="no" allowfullscreen width="1024" height="801" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;">
   </iframe>
 </div>
+{{ end }}
+{{ if or .Params.video .Params.path }}
 <p class="buttonRow">
+  {{ with .Params.video }}
   <a href="{{ . }}explore" class="buyButton secondary" target="_blank">{{ i18n "hikeInteractive" }}</a>
+  {{ end }}
+  {{ with .Params.path }}
+  <a href="{{ . }}" class="buyButton secondary" target="_blank">{{ i18n "hikePathDescription" }}</a>
+  {{ end }}
 </p>
 {{ end }}
