--- a/layouts/partials/top-sidebar-browse-en.html
+++ b/layouts/partials/top-sidebar-browse-en.html
@@ -5,6 +5,7 @@
   </h3>
   <ul>
     <li><a href="{{ $.Site.BaseURL}}en/hikes">Hikes around Slovenia</a></li>
+    <li><a href="{{ $.Site.BaseURL}}en/biking">Biking in Slovenia</a></li>
     <li><a href="{{ $.Site.BaseURL}}en/flowers">Slovenian wild flowers</a></li>
   </ul>
 </div>
