Migrate to OpenLayer 6.5.0

--- a/layouts/partials/include-map.html
+++ b/layouts/partials/include-map.html
@@ -7,5 +7,6 @@
 <div class="map__frame">
   <div id="mapdiv" data-lat="{{ $lat }}" data-lon="{{ $lon }}" data-zoom="{{ $zoom }}" data-lang="{{ $lang }}" class="map" style="height: {{ $maph }};"></div>
 </div>
-<script src="https://openlayers.org/api/OpenLayers.js"></script>
+<script src="/js/ol.js"></script>
+<link rel="stylesheet" href="/css/ol.css">
 <script src="/js/map.js"></script>
