--- a/layouts/partials/hike-details-buttons.html
+++ b/layouts/partials/hike-details-buttons.html
@@ -10,16 +10,23 @@
   {{ with .Params.maplink }}
     <a href="{{ . }}" class="buyButton secondary" target="_blank">{{ i18n "hikeMap" }}</a>
   {{ end }}
+{{ $video := .Resources.GetMatch "*.mp4" }}
+{{ if $video }}
 </p>
-{{ with .Params.video }}
-<div style="position: relative; padding-bottom: 56%; height: 0; margin: 1.5em 0; overflow: hidden;">
-  <iframe src="{{ . }}widget" frameborder="0" scrolling="no" allowfullscreen width="1024" height="801" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;">
-  </iframe>
-</div>
+<video controls style="max-width: 100%" src="{{ $video.Permalink }}"></video>
+<p class="buttonRow">
+{{ else }}
+  {{ with .Params.video }}
+  </p>
+  <div style="position: relative; padding-bottom: 56%; height: 0; margin: 1.5em 0; overflow: hidden;">
+    <iframe src="{{ . }}widget" frameborder="0" scrolling="no" allowfullscreen width="1024" height="801" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;">
+    </iframe>
+  </div>
+  <p class="buttonRow">
+  {{ end }}
 {{ end }}
 {{ $gpx := .Resources.GetMatch "*.gpx" }}
 {{ if or .Params.video .Params.path $gpx }}
-<p class="buttonRow">
   {{ with .Params.video }}
   <a href="{{ . }}explore" class="buyButton secondary" target="_blank">{{ i18n "hikeInteractive" }}</a>
   {{ end }}
@@ -29,5 +36,5 @@
   {{ with $gpx }}
   <a href="{{ .Permalink }}" class="buyButton secondary" target="_blank">{{ i18n "hikeGPX" }}</a>
   {{ end }}
-</p>
 {{ end }}
+</p>
