Add maps to hiking/biking top-level pages
* Display objects with no description in gray (works for SI/EN)
* Add map legend to regional maps (EN only)

--- a/layouts/region/term.html
+++ b/layouts/region/term.html
@@ -7,6 +7,7 @@
     {{ .Content }}
     {{ if .Params.lat }}
       {{ partial "include-map" .Params }}
+      {{ i18n "mapNotes" | markdownify }}
     {{ end }}
     {{ $short := where .Pages "Params.description" "eq" nil }}
     {{ if len $short }}
