--- a/layouts/partials/hike-details.html
+++ b/layouts/partials/hike-details.html
@@ -34,6 +34,11 @@
     <dt>{{ i18n "hikeLength" }}</dt>
     <dd>{{ . }} km</dd>
   {{ end }}
+  {{ $startpage := .GetPage (.Params.startpoint | default "None" | printf "/hikes/%s") }}
+  {{ if $startpage }}
+    <dt>{{ i18n "hikeStarting"}}</dt>
+    <dd><a href="{{ $startpage.Permalink }}">{{ $startpage.Title}}</a></dd>
+  {{ end }}
   {{ if or .Params.start .Params.peak }}
     <dt>{{ i18n "hikeCoordinates" }}</dt>
     <dd>
