Add nearby trips to biking sidebar

--- a/layouts/biking/single.html
+++ b/layouts/biking/single.html
@@ -15,7 +15,7 @@
     {{ partial "post-tags.html" . }}
   </div>
 </article>
-{{ partial "hikes-sidebar.html" . }}
+{{ partial "biking-sidebar.html" . }}
 {{ partial "load-photoswipe.html" . }}
 {{ partial "migrated-footer.html" . }}
 {{ partial "footer.html" . }}
