--- a/layouts/partials/post-blurb.html
+++ b/layouts/partials/post-blurb.html
@@ -8,7 +8,7 @@
   {{ end }}
   <article class='post__content'>
     <h3 class='post__title' itemprop='name headline'>
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
+      <a href="{{ .Permalink }}">{{ replace .Title (.Scratch.Get "RemoveFromTitle") "" }}</a>
       {{ if .Draft }}(draft)
       {{ else }}
         {{ if eq .Section "biking"}}
