Remove EN climbing non-links from the front page

--- a/layouts/partials/body-navigation.html
+++ b/layouts/partials/body-navigation.html
@@ -1,6 +1,7 @@
 <ul class='nav-links'>
   <li><a href='{{ $.Site.BaseURL }}'>🇬🇧🇺🇸</a></li>
   <li><a href='{{ $.Site.BaseURL }}en/hikes'>hikes</a>
+  <li><a href='{{ $.Site.BaseURL }}en/biking'>biking</a>
   <li><a href='{{ $.Site.BaseURL }}en/flowers'>flowers</a>
   <li><a href='{{ $.Site.BaseURL }}start.si.html'>🇸🇮</a></li>
   <li><a href='{{ $.Site.BaseURL }}hikes'>izleti</a>
