--- a/layouts/partials/header-head.html
+++ b/layouts/partials/header-head.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <head prefix="og: http://ogp.me/ns#">
   <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
-  <link href='https://www.ipspace.net/v3/images/favicon.ico' rel='shortcut icon' />
-  <link href='https://www.ipspace.net/v3/images/favicon.gif' rel='shortcut icon' type='image/gif' />
+  <link href='/images/favicon.png' rel='shortcut icon' type='image/png' />
   <link href="{{ .Permalink }}" rel='canonical' />
 <!--
   <link rel="alternate" type="application/atom+xml" title="ipSpace.net - Atom" href="https://feed.ipspace.net/blog/" />
