--- a/layouts/partials/post-blurb.html
+++ b/layouts/partials/post-blurb.html
@@ -7,19 +7,7 @@
     </div>
   {{ end }}
   <article class='post__content'>
-    <h3 class='post__title' itemprop='name headline'>
-      <a href="{{ .Permalink }}">{{ replace .Title (.Scratch.Get "RemoveFromTitle") "" }}</a>
-      {{ if .Draft }}(draft)
-      {{ else }}
-        {{ if eq .Section "biking"}}
-          {{ if .Params.length }}
-            ({{.Params.length}}&nbsp;km{{ with .Params.delta}},&nbsp;Δ={{ . }}&nbsp;m{{end}})
-          {{ end }}
-        {{ else }}
-        {{ with .Params.height }}({{ . }}&nbsp;m){{ end }}
-        {{ end }}
-      {{ end }}
-    </h3>
+    {{ partial "item-title-h3" . }}
     {{ if .Params.intro }}
       <div>{{ .Params.intro | markdownify }}</div>
     {{ else }}
