--- a/static/v3/css/other.css
+++ b/static/v3/css/other.css
@@ -2750,7 +2750,8 @@ Grid Layout Styles
 
 .post__blurb .blurb__thumb {
   max-width: 100%;
-  margin-bottom: 12px; }
+  margin-bottom: 12px;
+  text-align: center; }
   @media (min-width: 768px) {
     .post__blurb .blurb__thumb {
       max-width: 25%;
@@ -2758,9 +2759,12 @@ Grid Layout Styles
       padding-left: 1em;
       order: 99;
       margin-bottom: 24px; } }
+  @media (min-width: 1025px) {
+    .post__blurb .blurb__thumb {
+      max-height: calc(15vw - 1em); } }
   .post__blurb .blurb__thumb img {
-    width: 100%;
-    height: auto; }
+    max-width: 100%;
+    max-height: 100%; }
 
 .post__blurb article {
   margin-top: 0; }
