Reworded the climbing intro page, added a guidebooks page

--- a/layouts/partials/top-sidebar-browse-en.html
+++ b/layouts/partials/top-sidebar-browse-en.html
@@ -6,6 +6,7 @@
   <ul>
     <li><a href="{{ $.Site.BaseURL}}en/hikes">Hikes around Slovenia</a></li>
     <li><a href="{{ $.Site.BaseURL}}en/biking">Biking in Slovenia</a></li>
+    <li><a href="{{ $.Site.BaseURL}}en/climbing">Rock climbing ideas</a></li>
     <li><a href="{{ $.Site.BaseURL}}en/flowers">Slovenian wild flowers</a></li>
   </ul>
 </div>
