--- a/layouts/partials/body-banner.html
+++ b/layouts/partials/body-banner.html
@@ -1,8 +1,7 @@
 <div class='page-heading' style='background: url({{ $.Site.BaseURL}}images/{{ .Params.banner }})'>
   <div class='container'>
     <div class='page-heading__wrp'>
-      <h1 class='page-title'>{{ .Title }}
-      </h1>
+      <h1 class='page-title'>&nbsp;</h1>
     </div>
   </div>
 </div>
