--- a/layouts/partials/body-navigation.html
+++ b/layouts/partials/body-navigation.html
@@ -2,8 +2,9 @@
   <li><a href='{{ $.Site.BaseURL }}'>🇬🇧🇺🇸</a></li>
   <li><a href='{{ $.Site.BaseURL }}en/hikes'>hikes</a>
   <li><a href='{{ $.Site.BaseURL }}en/biking'>biking</a>
+  <li><a href='{{ $.Site.BaseURL }}en/climbing'>climbing</a>
   <li><a href='{{ $.Site.BaseURL }}en/flowers'>flowers</a>
-  <li><a href='{{ $.Site.BaseURL }}start.si.html'>🇸🇮</a></li>
+  <li><a href='{{ $.Site.BaseURL }}top'>🇸🇮</a></li>
   <li><a href='{{ $.Site.BaseURL }}hikes'>izleti</a>
   <li><a href='{{ $.Site.BaseURL }}flowers'>rože</a>
 </ul>
