New author photo

--- a/layouts/partials/body-footer.html
+++ b/layouts/partials/body-footer.html
@@ -1,10 +1,9 @@
 <footer class='page-footer'>
   <div class='footer-main'>
     <div class='container'>
-      <div class='page-footer__author'>
+      <div class='page-footer__author' style='max-width: 120px;'>
         <h3>The author</h3>
-        <img alt='Ivan Pepelnjak Photo' src='https://www.ipspace.net/v3/images/picture_ivan_footer_big_screen.jpg'
-          srcset='https://www.ipspace.net/v3/images/picture_ivan_footer_big_screen.jpg 1x, https://www.ipspace.net/v3/images/picture_ivan_footer_big_screen_2x.jpg 2x' />
+        <img alt='Ivan Pepelnjak Photo' src='/images/author.jpg' />
         <div style='clear: both'>
           <a class='social-icon' href='https://www.ipspace.net/About'>
             <svg class='page-footer__icon'>
