--- a/layouts/partials/hike-views.html
+++ b/layouts/partials/hike-views.html
@@ -1,9 +1,9 @@
 {{ $views := .Resources.Match "Raz*.[jJ][pP][gG]" }}
 {{ if gt (len $views) 0 }}
   {{ if eq (len $views) 1 }}
-    <h3>View from the top</h3>
+    <h3>View from the Top</h3>
   {{ else }}
-    <h3>Views from the top</h3>
+    <h3>Views from the Top</h3>
   {{ end }}
   {{ range $views }}
     <div class="fancy-figure box caption-position-bottom">
