Increase the version of GPX map script

--- a/layouts/partials/include-gpx-map.html
+++ b/layouts/partials/include-gpx-map.html
@@ -22,6 +22,6 @@
 <p class='note'>{{ i18n "mapGPSTrack" }}</p>
 <script src="/js/ol.js"></script>
 <link rel="stylesheet" href="/css/ol.css">
-<script src="/js/map.js"></script>
+<script src="/js/map.js?version=2"></script>
   {{ end }}
 {{ end }}
